--- a/registration_card/registration_form.css
+++ b/registration_card/registration_form.css
@@ -1,4 +1,18 @@
-* {
+:root {
+  --font-large: 4rem;
+  --font-medium: 2rem;
+  --font-small: 1.6rem;
+  --radius-large: 20px;
+  --radius-medium: 12px;
+  --radius-small: 6px;
+  --c-red: rgb(235, 83, 83);
+  --c-red-light: rgb(237, 110, 110);
+  --c-white: whitesmoke;
+}
+
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,35 +21,97 @@ html {
   font-size: 62.5%;
 }
 body {
+  font-size: var(--font-small);
+  font-weight: 400;
   height: 100vh;
-  background-color: rgb(192, 155, 226);
+  /* background-color: rgb(192, 155, 226); */
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url("bg-img.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .registration-card {
-  background-color: beige;
-  padding: 2rem;
-  border-radius: 20px;
+  padding: 4rem;
+  border-radius: var(--radius-large);
+
+  background: transparent;
+  border: 1px solid var(--c-white);
+  backdrop-filter: blur(40px);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 .registration-card__title {
+  text-align: center;
+  margin-bottom: 3.6rem;
+  font-size: var(--font-large);
 }
 .registration-form {
   display: flex;
+  flex-direction: row-reverse;
   gap: 2rem;
 }
 .column {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 .registration-form__input-box {
   display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .registration-form__label {
+  font-size: var(--font-medium);
 }
 .registration-form__input {
+  padding: 1rem 2rem;
+  font-size: var(--font-small);
+  border-radius: var(--radius-small);
+  border: 1px solid black;
+  outline: none;
+  background: transparent;
+}
+.radio-buttons__title {
+  margin-bottom: 1.6rem;
+  font-size: var(--font-medium);
+  font-weight: 600;
 }
 .radio-buttons {
   display: flex;
+  align-items: center;
+  gap: 1.8rem;
 }
 .radio-button {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+.registration-form__button-box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.btn {
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: var(--radius-small);
+  color: var(--c-white);
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+.btn.btn--cancel {
+  background-color: var(--c-red);
+}
+.btn.btn--cancel:hover {
+  background-color: var(--c-red-light);
+}
+.btn.btn--submit {
+  background-image: linear-gradient(to right bottom, #446fa7, rgb(73, 8, 177));
+}
+.btn.btn--submit:hover {
+  background-image: linear-gradient(to right bottom, #4908b1, #446fa7);
 }
